tests/errors/first_stage/label/saved_keyword/saved_keyword.as
; the label's name is a saved keyword
prn: mov r1, r2